<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HighlanderChef</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_start_screen">StartScreen</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_browse">BrowseActivity</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="browse">Browse</string>
    <string name="input_username">Username</string>
    <string name="input_password">Password</string>
    <string name="title_activity_startup_screen">StartupScreen</string>
    <string name="enterusername_msg">Enter Username</string>
    <string name="enterpassword_msg">Enter Password</string>
    <string name="Invalidlogin">ERROR: Invalid Login</string>
    <string name="submit_button">Submit</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="Welcome_Chef">Welcome Chef %1$s</string>
    <string name="Compose_Recipe">Compose Recipe</string>
    <string name="Browse_Recipes">Browse Recipes</string>
    <string name="View_My_Recipes">View My Recipes</string>
    <string name="View_Favorites">View Favorites</string>
    <string name="View_Drafts">View Drafts</string>
    <string name="View_Self_Homepage">View Homepage</string>
    <string name="Search_Recipes">Search Recipes</string>
    <string name="title_activity_make_arecipe1">MakeARecipe1</string>
    <string name="title_activity_view_my_recipes">ViewMyRecipes</string>
    <string name="title_activity_make_arecipe2">MakeARecipe2</string>
    <string name="title_activity_make_arecipe3">MakeARecipe3</string>
    <string name="Remember_password">Remember Password</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="Search_Categories">Search Categories</string>
    <string name="title_activity_browse_results">BrowseResults</string>
    <string name="invalidSignUp">Invalid Sign-up!</string>
    <string name="Enter_recipe_name">Enter a recipe name</string>
    <string name="Enter_despription">Enter description of recipe</string>
    <string name="Enter_est_time">Enter estimate cook time</string>
    <string name="MakeARecipe2Header">Add Ingredients</string>
    <string name="Add_Image">Add Image</string>
    <string name="Add_ingredients">Add Ingredients</string>
    <string name="no_ingredients_added">(No Ingredients added yet)</string>
    <string name="Add_an_Ingredient">Add Ingredient</string>
    <string name="Ingredient_Amount">Amount</string>
    <string name="Add_another_ingredient_button">Add Ingredient</string>
    <string name="Add_directions_button">Add current direction</string>
    <!-- Refer to layout/activity_recipeForum.xml -->
    <string name="SaveDraft">Save As Draft</string>
    <string name="recipeTitle">DEFAULT RECIPE TITLE</string>
    <string name="nameOfRecipe"> Name of the recipe</string>
    <string name="defaultIngredientList"> DEFAULT INGREDIENT LIST</string>
    <string name="defaultDirectionsList"> DEFAULT DIRECTIONS LIST</string>
    <string name="tapToComment">Tap here to make a comment!</string>
    <string name="Comment">Comment</string>
    <string name="msgCannotDisplayRecipe"> Sorry! We cannot display the recipe! </string>
    <!-- Refer to layout/activity_MakeARecipe3.xml -->
    <string name="MakeARecipe3Header">Add Directions</string>
    <string name="no_directions_added">(No directions added yet)</string>
    <string name="Enter_a_direction">Enter a step</string>
    <string name="New_directions_header">Added Directions </string>
    <string name="Submit_Recipe">Submit Recipe</string>
    <string name="ConfirmationMessage">Recipe successfully added</string>
    <string name="title_activity_recipe_forum">RecipeForumActivity</string>
    <string name="AddImagetoDirection">Add image to direction</string>
    <string name="title_activity_recipe__forum">Recipe_Forum</string>
    <string name="submit_error">ERROR submitting recipe. Try Again</string>
    <string name="Search">Search</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_user_homepage">UserHomepage</string>
    <!-- Refer to layout/activity_user_homepage.xml -->
    <string name="Follow">Follow</string>
    <string name="title_activity_image_comp">ImageComp</string>
    <string name="title_activity_camera">Camera</string>
    <string name="title_activity_cam">Cam</string>
    <string name="title_activity_preferences">PreferencesActivity</string>
    <string name="title_activity_question_board">QuestionBoardActivity</string>
	<string name="ClearNotifications">Clear All Notifications</string>
</resources>