	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	xmlns:tools="http://schemas.android.com/tools"
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:orientation="horizontal" >
    	
	    	  
	    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Search"
	    android:onClick="SearchPressed"/>
	    
	    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
	    android:onClick="LoginPressed"/>
	    
	    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup" 
	    android:onClick="SignupPressed"/>
	    
	    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/browse" 
        android:onClick="BrowsePressed"/>
	</LinearLayout>

	