<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.highlanderchef.MakeARecipe2" >

    <TextView
        android:id="@+id/makearecipe2header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MakeARecipe2Header" />

    <EditText
        android:id="@+id/ingredientmeasurement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/makearecipe2header"
        android:layout_below="@+id/addaningredient"
        android:ems="10"
        android:hint="@string/Ingredient_Amount" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/makearecipe2header"
        android:layout_below="@+id/ingredientmeasurement"
        android:onClick="addAnotherIngredientPressed"
        android:text="@string/Add_another_ingredient_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/makearecipe2header"
        android:layout_below="@+id/button1"
        android:onClick="addDirectionsPressed"
        android:text="@string/Add_directions_button" />

    <TextView
        android:id="@+id/listofaddedingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/makearecipe2header"
        android:layout_below="@+id/makearecipe2header"
        android:layout_marginTop="20dp"
        android:text="@string/no_ingredients_added" />

    <EditText
        android:id="@+id/addaningredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ingredientmeasurement"
        android:layout_below="@+id/listofaddedingredients"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/Add_an_Ingredient" >
    
   		 <requestFocus />
    </EditText>

</RelativeLayout>