<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" 
    android:gravity="center_horizontal"
    tools:context="com.highlander.LoginActivity" >

    <EditText
        android:id="@+id/input_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_username"
        android:inputType="text"
        android:imeOptions="actionNext|flagForceAscii" />
    
    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:imeOptions="actionDone|flagForceAscii" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Remember_password" />
    
    <TextView
        android:id="@+id/invalidlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Invalidlogin" />
    
    <Button
		android:id="@+id/angry_btn"
		android:text="@string/login"
		android:textColor="#FFFFFF"
		android:textSize="30sp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:background="@drawable/buttonshape"
		android:shadowColor="#A8A8A8"
		android:shadowDx="0"
		android:shadowDy="0"
		android:shadowRadius="5"
		android:onClick="validateSignInPressed"
	/>

</LinearLayout>
