<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.highlanderchef.MakeARecipe3" >

    <TextView
        android:id="@+id/makearecipe3header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MakeARecipe3Header" />

    <TextView
        android:id="@+id/listofingredientsadded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/makearecipe3header"
        android:layout_below="@+id/makearecipe3header"
        android:layout_marginTop="15dp"
        android:text="@string/no_directions_added" />

	<RelativeLayout        
		android:id="@+id/linearLayoutImages"
     	android:layout_width="wrap_content"
      	android:layout_height="wrap_content" >    
    </RelativeLayout>
    
    <EditText
        android:id="@+id/addadirection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/listofingredientsadded"
        android:layout_below="@+id/listofingredientsadded"
        android:ems="10"
        android:hint="@string/Enter_a_direction" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignLeft="@+id/addadirection"
        android:layout_marginLeft="15dp"
        android:onClick="addImageToDirectionPressed"
        android:text="@string/AddImagetoDirection" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/addadirection"
        android:layout_below="@+id/button1"
        android:layout_marginRight="18dp"
        android:onClick="submitRecipePressed"
        android:text="@string/Submit_Recipe" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addadirection"
        android:layout_marginTop="24dp"
        android:layout_toRightOf="@+id/button2"
        android:onClick="addADirectionPressed"
        android:text="@string/Add_directions_button" />

    <ImageView
        android:id="@+id/added_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:src="@drawable/uploadimage" />

</RelativeLayout>