<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.highlanderchef.RecipeForum" >

    <TextView
	    android:id="@+id/titleOfRecipe"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/recipeTitle" />
    
	<!-- Let users make a Comment -->
	  
	<!-- Users can select the rating out of 5 starts --> 
		
<!-- User can add a comment by pressing this button -->

	<Button
	    android:id="@+id/submitComment"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/titleOfRecipe"
	    android:layout_alignParentBottom="true"
	    android:layout_marginBottom="194dp"
	    android:onClick="addCommentPressed"
	    android:text="@string/Comment" />

	<TextView
	    android:id="@+id/selectedRecipeDirectionsList"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/userCommentText"
	    android:layout_alignRight="@+id/selectedRecipeIngredientList"
	    android:text="@string/defaultDirectionsList" />

	<EditText
	    android:id="@+id/userCommentText"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/recipeRatingBar"
	    android:layout_alignLeft="@+id/selectedRecipeDirectionsList"
	    android:layout_marginBottom="14dp"
	    android:ems="10"
	    android:hint="@string/tapToComment" >

	    <requestFocus />
	</EditText>

	<RatingBar
	    android:id="@+id/recipeRatingBar"
	    style="?android:attr/ratingBarStyleSmall"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/submitComment"
	    android:layout_alignLeft="@+id/userCommentText"
	    android:layout_marginBottom="18dp"
	    android:max="100"
	    android:numStars="5"
	    android:onClick="addRatingPressed"
	    android:rating="0.0"
	    android:stepSize="0.0" />

	<TextView
	    android:id="@+id/selectedRecipeIngredientList"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/selectedRecipeDirectionsList"
	    android:layout_alignLeft="@+id/titleOfRecipe"
	    android:layout_marginBottom="14dp"
	    android:text="@string/defaultIngredientList" />
	  
</RelativeLayout>
