<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center_horizontal"
    tools:context="com.highlander.SignupActivity" >

    <EditText
        android:id="@+id/enterusername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enterusername_msg"
        android:imeOptions="actionNext|flagForceAscii"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/enterpassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enterpassword_msg"
        android:imeOptions="actionNext|flagForceAscii"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Confirm_Password"
        android:imeOptions="actionDone|flagForceAscii"
        android:inputType="textPassword" />
    <!-- Added TextView box for invalid signing up (TINA). See strings.xml -->
    <TextView
        android:id="@+id/invalidAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invalidSignUp" />

    <Button
		android:id="@+id/button1"
		android:text="Submit"
		android:textColor="#FFFFFF"
		android:textSize="30sp"
		android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:background="@drawable/buttonshape"
		android:shadowColor="#A8A8A8"
		android:shadowDx="0"
		android:shadowDy="0"
		android:shadowRadius="5"
		android:onClick="validateSignUpSubmitPressed"
	/>


</LinearLayout>
