<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.highlanderchef.MakeARecipe2" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <EditText
        android:id="@+id/ingredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/add_measurement"
        android:layout_alignBottom="@+id/add_measurement"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:hint="@string/Add_Ingredient" />

    <EditText
        android:id="@+id/add_measurement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/Ingredient_Amount" >
        
     <Button
           android:id="@+id/add_another_ingrediant"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:onClick="add_another_ingrediantPressed"
           android:text="@string/Add_another_ingredient_button" />

        <requestFocus />
    </EditText>

</RelativeLayout>