<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.highlanderchef.recipeForum" >

        <TextView
           android:id="@+id/titleOfRecipe"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/recipeTitle" />

<!-- This depends on the Java object, Recipe. This will be modified in activity_recipeForum.java -->
        <ImageView
            android:id="@+id/selectedRecipePhoto"
            android:layout_width="wrap_content"
            android:layout_height="272dp" 
            android:layout_weight="1"
            android:src="@drawable/noImageAvailable" />
<!-- This depends on the Java object, Recipe. This will be modified in activity_recipeForum.java -->
        <TextView
            android:id="@+id/selectedRecipeIngredientList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaultIngredientList"/>

<!-- This depends on the Java object, Recipe. This will be modified in activity_recipeForum.java -->         
        <TextView
            android:id="@+id/selectedRecipeDirectionsList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaultDirectionsList"/>

<!-- Let users make a Comment -->
        <EditText
            android:id="@+id/userCommentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tapToComment" />
          <!--Should I add a hint to the EditText object above? -->


<!-- Users can select the rating out of 5 starts -->
        <RatingBar
          android:id="@+id/recipeRatingBar"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="15dp"
          android:layout_marginTop="15dp"
          android:numStars="5"
          android:max="100"
          android:rating="0.0" 
          android:stepSize="0.0"
          android:onClick="addRatingPressed"
          style="?android:attr/ratingBarStyleSmall" /> 
<!-- User can add a comment by pressing this button --> 
       <Button
           android:id="@+id/submitComment"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignRight="center_horizontal"
           android:layout_marginTop="170dp"
           android:onClick="addCommentPressed"
           android:text="@string/comment" />

/>
